--- a/touchless/package.json
+++ b/touchless/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "css": "^3.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-scrollbar": "^3.1.0"
