--- a/touchless/package.json
+++ b/touchless/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/translate": "^8.5.0",
     "amqplib": "^0.10.4",
     "css": "^3.0.0",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.4",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
