--- a/touchless/package.json
+++ b/touchless/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@google-cloud/translate": "^8.5.0",
+    "@gsap/react": "^2.1.1",
     "amqplib": "^0.10.4",
     "css": "^3.0.0",
+    "gsap": "^3.12.5",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
+    "lenis": "^1.1.18",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
