--- a/touchless/package.json
+++ b/touchless/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.1",
     "amqplib": "^0.10.4",
     "css": "^3.0.0",
+    "google-translate-api": "^2.3.0",
     "gsap": "^3.12.5",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
